crates/b2c-codegen/tests/it/snapshots/it__snapshots__join_variants.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <string>

int main() {
    int score = 42;
    std::string name = "Ada";
    char letter = 'A';
    bool done = true;
    double ratio = 0.5;
    std::string j1 = std::string("Score: ") + std::to_string(score);
    std::string j2 = name + " " + std::string(1, letter);
    std::string j3 = std::string(1, letter) + "!";
    std::string j4 = std::to_string(score) + " points";
    std::string j5 = std::string(done ? "true" : "false") + "\?";
    std::string j6 = std::string("x") + (done ? "true" : "false") + "true" + std::string(1, 'c');
    std::string j7 = name;
    std::string j8 = std::string("Hi ") + (name + "!");
    std::string j9 = std::string("a") + "b";
    bool j10 = std::string("a") < "b";
    bool j11 = "Ada" == name;
    std::string j12 = std::to_string(ratio) + std::to_string(score);
    std::string j13 = std::string(done ? "yes" : "no");
    auto j14 = std::string("auto text");
    std::string j15 = std::string();
    auto j16 = std::string(done ? "on" : "off");
    std::cout << j1 << ", " << j2 << ", " << j3 << ", " << j4 << ", " << j5 << ", " << j6 << ", "
              << j7 << ", " << j8 << ", " << j9 << ", " << (j10 ? "true" : "false") << ", "
              << (j11 ? "true" : "false") << ", " << j12 << ", " << j13 << ", " << j14 << ", "
              << j15 << ", " << j16 << '\n';
    return 0;
}
