crates/b2c-codegen/tests/it/snapshots/it__snapshots__print_variants.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <string>

int main() {
    int a = 3;
    int c = 4;
    bool ok = true;
    char letter = 'z';
    double d = 0.5;
    std::string s = "text";
    std::cout << "Hello, world!" << '\n';
    std::cout << a << c;
    std::cout << a << ", " << c << ", " << letter << '\n';
    std::cerr << "Oops" << '\n';
    std::cout << (ok ? "true" : "false") << " " << "true" << " " << (a < c ? "true" : "false")
              << " " << "false" << '\n';
    std::cout << a + c << a * c << (a > c ? a : c) << '\n';
    std::cerr << d << " " << s << '\n';
    std::cout << '\n';
    return 0;
}
