crates/b2c-codegen/tests/it/snapshots/it__snapshots__repeat_counter_names.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>

int k();

int k() {
    return 1;
}

int main() {
    int i = 1;
    int j = 2;
    int i2 = 3;
    for (int i3 = 0, n = k(); i3 < n; ++i3) {
        std::cout << i << j << i2 << '\n';
    }
    return 0;
}
