crates/b2c-codegen/tests/it/snapshots/it__snapshots__repeat_loops.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <random>
#include <utility>

// ---- Blocks2Cpp support helpers (only those used) ------------------------
namespace b2c {

/// Returns a random whole number between `low` and `high`, including both.
/// The bounds may be given in either order. The random engine is seeded once,
/// from `std::random_device`, the first time this function is called.
inline int random_int(int low, int high) {
    static std::mt19937 engine{std::random_device{}()};
    if (low > high) {
        std::swap(low, high);
    }
    std::uniform_int_distribution<int> distribution(low, high);
    return distribution(engine);
}

}  // namespace b2c
// ---- End of Blocks2Cpp support helpers -----------------------------------

int main() {
    int i = 2;
    int n = 3;
    for (int j = 0; j < 3; ++j) {
        std::cout << "a" << '\n';
    }
    for (int j = 0; j < 2; ++j) {
        for (int k = 0; k < i; ++k) {
            std::cout << i << '\n';
        }
    }
    for (int j = 0, n2 = n; j < n2; ++j) {
        ++n;
    }
    for (int j = 0, n2 = b2c::random_int(1, 3); j < n2; ++j) {
        std::cout << "r" << '\n';
    }
    for (int k = 0; k < 2; ++k) {
        int j = 5;
        std::cout << j << '\n';
    }
    std::cout << i << n << '\n';
    return 0;
}
