crates/b2c-codegen/tests/it/snapshots/it__snapshots__return_and_exit.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <cstdlib>
#include <iostream>

int check(int value);
void report(int value);

int check(int value) {
    if (value < 0) {
        std::exit(2);
    }
    return value * 2;
}

void report(int value) {
    if (value > 100) {
        return;
    }
    if (value == 7) {
        std::exit(0);
    }
    std::cout << value << '\n';
}

int main() {
    int result = check(21);
    report(result);
    if (result != 42) {
        return 1;
    }
    return 0;
}
