crates/b2c-codegen/tests/it/snapshots/it__snapshots__style_options.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Quiz "2"
// second line <U+202E>", module "main".

#include <cctype>
#include <cstdlib>
#include <iostream>
#include <limits>
#include <random>
#include <string>
#include <utility>

// ---- Blocks2Cpp support helpers (only those used) ------------------------
namespace b2c {

/// Returns a random whole number between `low` and `high`, including both.
/// The bounds may be given in either order. The random engine is seeded once,
/// from `std::random_device`, the first time this function is called.
inline int random_int(int low, int high) {
  static std::mt19937 engine{std::random_device{}()};
  if (low > high) {
    std::swap(low, high);
  }
  std::uniform_int_distribution<int> distribution(low, high);
  return distribution(engine);
}

/// The message shown when the typed input is not a valid `T`.
template <typename T>
const char* invalid_input_message() {
  return "Please enter a valid value.";
}

/// The message shown when the typed input is not a whole number.
template <>
inline const char* invalid_input_message<int>() {
  return "Please enter a whole number.";
}

/// The message shown when the typed input is not a number.
template <>
inline const char* invalid_input_message<double>() {
  return "Please enter a number.";
}

/// The message shown when the typed input is not true or false.
template <>
inline const char* invalid_input_message<bool>() {
  return "Please enter true or false.";
}

/// Reads one `T` from standard input. Returns false if the input is not a
/// valid `T`.
template <typename T>
bool read_value(T& value) {
  return static_cast<bool>(std::cin >> value);
}

/// Reads a true/false answer: accepts true/false, yes/no and 1/0, in any
/// letter case. Returns false for any other word.
inline bool read_value(bool& value) {
  std::string word;
  if (!(std::cin >> word)) {
    return false;
  }
  for (char& letter : word) {
    letter = static_cast<char>(std::tolower(static_cast<unsigned char>(letter)));
  }
  if (word == "true" || word == "yes" || word == "1") {
    value = true;
    return true;
  }
  if (word == "false" || word == "no" || word == "0") {
    value = false;
    return true;
  }
  return false;
}

/// Prints `prompt` and reads a `T` (a number, a character or true/false),
/// asking again until the input is valid. The rest of the line after the
/// value is ignored. At the end of the input (for example when the input
/// comes from a file), prints "Input ended" to the error stream and exits
/// with code 1 instead of asking forever.
template <typename T>
T ask(const std::string& prompt = "") {
  while (true) {
    std::cout << prompt;
    T value{};
    if (read_value(value)) {
      std::cin.ignore(std::numeric_limits<std::streamsize>::max(), '\n');
      return value;
    }
    if (std::cin.eof()) {
      std::cerr << "Input ended" << '\n';
      std::exit(1);
    }
    std::cin.clear();
    std::cin.ignore(std::numeric_limits<std::streamsize>::max(), '\n');
    std::cout << invalid_input_message<T>() << '\n';
  }
}

}  // namespace b2c
// ---- End of Blocks2Cpp support helpers -----------------------------------

int main() {
  int secret = b2c::random_int(1, 100);
  int guess = 0;
  std::cout << "Guess a number from 1 to 100!" << '\n';
  while (guess != secret) {
    guess = b2c::ask<int>("Your guess: ");
    if (guess < secret) {
      std::cout << "Too low!" << '\n';
    } else if (guess > secret) {
      std::cout << "Too high!" << '\n';
    } else {
      std::cout << "Correct!" << '\n';
    }
  }
  return 0;
}
