crates/b2c-codegen/tests/it/snapshots/it__snapshots__variables.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <string>

int main() {
    int score = 0;
    const double rate = 2.5;
    auto count = 3;
    auto name = std::string("Ada");
    std::string title{};
    bool done{};
    char letter = 'x';
    score = score + count;
    title = name;
    const auto total = score * 2;
    std::cout << score << " " << rate << " " << name << " " << title << " "
              << (done ? "true" : "false") << " " << letter << " " << total << '\n';
    return 0;
}
