crates/b2c-codegen/tests/it/snapshots/it__snapshots__while_loops.snap
---
source: crates/b2c-codegen/tests/it/snapshots.rs
expression: render(&project)
---
// Generated by Blocks2Cpp 1.0.0 from project "Snapshot Tests", module "main".
// Edit the blocks, not this file – changes here are overwritten.

#include <iostream>
#include <string>

int main() {
    int n = 10;
    double level = 5.0;
    bool done = false;
    bool tired = false;
    std::string name = "x";
    while (n > 0) {
        n -= 3;
    }
    while (n != 0) {
        n = 0;
    }
    while (n < 5) {
        n = 5;
    }
    while (!(level < 1.0)) {
        level = 0.5;
    }
    while (level == 0.5) {
        level = 0.5;
    }
    while (name <= "w") {
        name = "y";
    }
    while (!done) {
        done = true;
    }
    while (done) {
        done = false;
    }
    while (!(done && tired)) {
        tired = true;
    }
    while (false) {
    }
    while ((n == 5) != done) {
        done = true;
    }
    std::cout << n << level << (done ? "true" : "false") << (tired ? "true" : "false") << name
              << '\n';
    return 0;
}
